[tool.poetry]
name = "goit-py-web-hw-08"
version = "0.1.0"
description = ""
authors = ["Serge-Moskalenko <skmos2019@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mongoengine = "0.27.0"
pymongo = "4.3.3"
redis = "4.5.5"
pika = "^1.3.2"
redis-lru = "^0.1.2"
faker = "^35.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
